--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -14,7 +16,7 @@
     "class main(object):\n",
     "    \n",
     "    def __init__(self, n_class, len_seq, dim_mfcc, batch_train, learning_rate, start_step, step_train, path_tfr_train, dir_log,\n",
-    "                batch_test, test_step, step_test, path_tfr_test):\n",
+    "                 batch_test, test_step, step_test, path_tfr_test):\n",
     "        self.n_class = n_class\n",
     "        self.len_seq = len_seq\n",
     "        self.dim_mfcc = dim_mfcc\n",
@@ -28,7 +30,7 @@
     "        self.test_step = test_step\n",
     "        self.step_test = step_test\n",
     "        self.path_tfr_test = path_tfr_test\n",
-    "        \n",
+    "\n",
     "    #TFRecordsからデータセット取り出し\n",
     "    def input(self, path_tfr):\n",
     "        file_name_queue = tf.train.string_input_producer([path_tfr])\n",
@@ -41,10 +43,10 @@
     "                'label': tf.FixedLenFeature([], tf.int64),\n",
     "                'data': tf.FixedLenFeature([], tf.string),\n",
     "            })\n",
-    "        \n",
+    "\n",
     "        datas = tf.decode_raw(features['data'], tf.float32)\n",
     "        labels = tf.cast(features['label'], tf.int32)\n",
-    "        \n",
+    "\n",
     "        datas = tf.reshape(datas, [self.len_seq, self.dim_mfcc])\n",
     "        labels = tf.reshape(labels, [1])\n",
     "\n",
@@ -52,10 +54,10 @@
     "            [datas, labels],\n",
     "            batch_size=self.batch_test, capacity=1000+self.batch_test*self.dim_mfcc\n",
     "        )\n",
-    "            \n",
+    "\n",
     "        return datas, labels\n",
-    "                \n",
-    "    #TFRecordsからデータセット取り出し(シャッフル)\n",
+    "\n",
+    "    #TFRecordsからデータセット取り出し(shuffle)\n",
     "    def input_shuffle(self, path_tfr):\n",
     "        file_name_queue = tf.train.string_input_producer([path_tfr])\n",
     "        reader = tf.TFRecordReader()\n",
@@ -106,7 +108,7 @@
     "        var = tf.get_variable(name, shape=shape, initializer=tf.truncated_normal_initializer(stddev=stddev))\n",
     "        return var\n",
     "        \n",
-    "    #Dense\n",
+    "    #Linear\n",
     "    def Linear(self, x, n_inputs, n_units, stddev, l_name):\n",
     "        with tf.variable_scope(l_name) as scope:\n",
     "            weights = self.variable('weights', shape=[n_inputs, n_units], stddev=stddev)\n",
@@ -129,12 +131,12 @@
     "        x_unstack_rev = x_unstack[::-1]\n",
     "\n",
     "        lstm1 = self.LSTM(x_unstack, n_units=256, l_name='lstm1')\n",
-    "        lstm2 = self.LSTM(lstm1[0], n_units=256, l_name='lstm2')\n",
+    "        #lstm2 = self.LSTM(lstm1[0], n_units=256, l_name='lstm2')\n",
     "        \n",
     "        lstm_rev1 = self.LSTM(x_unstack_rev, n_units=256, l_name='lstm_rev1')\n",
-    "        lstm_rev2 = self.LSTM(lstm_rev1[0], n_units=256, l_name='lstm_rev2')\n",
+    "        #lstm_rev2 = self.LSTM(lstm_rev1[0], n_units=256, l_name='lstm_rev2')\n",
     "\n",
-    "        concatenate = tf.concat([lstm2[0][-1], lstm_rev2[0][-1]], axis=1)\n",
+    "        concatenate = tf.concat([lstm1[0][-1], lstm_rev1[0][-1]], axis=1)\n",
     "        \n",
     "        linear1 = self.Linear(concatenate, n_inputs=512, n_units=self.n_class, stddev=0.01, l_name='linear1')\n",
     "        return linear1\n",
@@ -203,16 +205,16 @@
     "            coord.request_stop()\n",
     "            coord.join(threads)\n",
     "            writer.close()\n",
-    "\n",
+    "            \n",
     "    #テスト\n",
     "    def test(self):\n",
     "        sess = tf.InteractiveSession()\n",
-    "        \n",
+    "\n",
     "        x = tf.placeholder(tf.float32, shape=[None, self.len_seq, self.dim_mfcc])\n",
     "        y_ = tf.placeholder(tf.float32, shape=[None, self.n_class])\n",
     "\n",
     "        preds = self.model(x)\n",
-    "        \n",
+    "\n",
     "        with tf.name_scope('cross_entropy'):\n",
     "            cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=preds, labels=y_))\n",
     "            tf.add_to_collection('losses', cross_entropy)\n",
@@ -224,25 +226,25 @@
     "            correct_pred = tf.equal(tf.argmax(preds, 1), tf.argmax(y_, 1))\n",
     "            accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
     "            self.variable_summaries(accuracy)\n",
-    "            \n",
+    "\n",
     "        merged = tf.summary.merge_all()\n",
     "        dir_log = os.path.join(self.dir_log, 'test')\n",
     "        self.make_dir(dir_log)\n",
     "        writer = tf.summary.FileWriter(dir_log, sess.graph)\n",
-    "        \n",
+    "\n",
     "        saver = tf.train.Saver(max_to_keep=1000)\n",
-    "        \n",
+    "\n",
     "        datas, labels = self.input(self.path_tfr_test)\n",
     "        labels = tf.one_hot(labels, depth=self.n_class, dtype=tf.float32)\n",
-    "        \n",
+    "\n",
     "        n_test_iters = self.step_test * self.batch_test\n",
     "        init_op = [tf.global_variables_initializer(), tf.local_variables_initializer()]\n",
-    "        \n",
+    "\n",
     "        with tf.Session() as sess:\n",
     "            sess.run(init_op)\n",
     "            coord = tf.train.Coordinator()\n",
     "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
-    "            \n",
+    "\n",
     "            saver.restore(sess, os.path.join(self.dir_log, 'save_files/model.ckpt-'+str(self.test_step)))\n",
     "            step = 1\n",
     "            acc_all = 0.0\n",
@@ -257,13 +259,10 @@
     "                    options=run_options, run_metadata=run_metadata)\n",
     "                writer.add_summary(summary, step)\n",
     "                acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
-    "                acc_all += acc\n",
     "                loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
     "                print('step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(step, loss, acc))\n",
     "                step += 1\n",
-    "            acc_all /= step - 1\n",
-    "            print('ALL_TEST_ACC: {:.5f}'.format(acc_all))\n",
-    "                \n",
+    "\n",
     "            coord.request_stop()\n",
     "            coord.join(threads)\n",
     "            writer.close()"
@@ -272,25 +271,44 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3000\n",
-      "step: 1 / loss: 2.265119 / test_acc: 0.48000\n",
-      "step: 2 / loss: 1.541811 / test_acc: 0.60000\n",
-      "step: 3 / loss: 4.076869 / test_acc: 0.04000\n",
-      "step: 4 / loss: 2.408398 / test_acc: 0.48000\n",
-      "step: 5 / loss: 5.060159 / test_acc: 0.00000\n",
-      "step: 6 / loss: 3.490881 / test_acc: 0.12000\n",
-      "step: 7 / loss: 3.247622 / test_acc: 0.08000\n",
-      "step: 8 / loss: 3.031630 / test_acc: 0.00000\n",
-      "step: 9 / loss: 2.384178 / test_acc: 0.36000\n",
-      "step: 10 / loss: 2.130916 / test_acc: 0.00000\n",
-      "step: 11 / loss: 3.745140 / test_acc: 0.00000\n",
-      "ALL_TEST_ACC: 0.19636\n"
+      "step: 100 / loss: 2.922967 / acc: 0.03333\n",
+      "step: 200 / loss: 2.051805 / acc: 0.46667\n",
+      "step: 300 / loss: 0.879652 / acc: 0.86667\n",
+      "step: 400 / loss: 0.198623 / acc: 1.00000\n",
+      "step: 500 / loss: 0.046468 / acc: 1.00000\n",
+      "step: 600 / loss: 0.028530 / acc: 1.00000\n",
+      "step: 700 / loss: 0.016011 / acc: 1.00000\n",
+      "step: 800 / loss: 0.009124 / acc: 1.00000\n",
+      "step: 900 / loss: 0.179624 / acc: 1.00000\n",
+      "step: 1000 / loss: 0.036639 / acc: 1.00000\n",
+      "step: 1100 / loss: 0.013676 / acc: 1.00000\n",
+      "step: 1200 / loss: 0.007700 / acc: 1.00000\n",
+      "step: 1300 / loss: 0.005904 / acc: 1.00000\n",
+      "step: 1400 / loss: 0.005123 / acc: 1.00000\n",
+      "step: 1500 / loss: 0.003529 / acc: 1.00000\n",
+      "step: 1600 / loss: 0.003411 / acc: 1.00000\n",
+      "step: 1700 / loss: 0.002500 / acc: 1.00000\n",
+      "step: 1800 / loss: 0.002675 / acc: 1.00000\n",
+      "step: 1900 / loss: 0.001484 / acc: 1.00000\n",
+      "step: 2000 / loss: 0.001909 / acc: 1.00000\n",
+      "step: 2100 / loss: 0.001524 / acc: 1.00000\n",
+      "step: 2200 / loss: 0.001440 / acc: 1.00000\n",
+      "step: 2300 / loss: 0.001200 / acc: 1.00000\n",
+      "step: 2400 / loss: 0.001163 / acc: 1.00000\n",
+      "step: 2500 / loss: 0.001025 / acc: 1.00000\n",
+      "step: 2600 / loss: 0.000974 / acc: 1.00000\n",
+      "step: 2700 / loss: 0.000711 / acc: 1.00000\n",
+      "step: 2800 / loss: 0.000661 / acc: 1.00000\n",
+      "step: 2900 / loss: 0.000704 / acc: 1.00000\n",
+      "step: 3000 / loss: 0.000572 / acc: 1.00000\n"
      ]
     }
    ],
@@ -302,16 +320,15 @@
     "    batch_train = 30,\n",
     "    learning_rate = 0.001,\n",
     "    start_step = 1,\n",
-    "    step_train = 10000,\n",
+    "    step_train = 3000,\n",
     "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords',\n",
     "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log',\n",
     "    batch_test = 25,\n",
-    "    test_step = 3000,\n",
+    "    test_step = 300,\n",
     "    step_test = 11,\n",
     "    path_tfr_test = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/test-male.tfrecords'\n",
     "    )\n",
-    "#m.train()\n",
-    "m.test()"
+    "m.train()"
    ]
   }
  ],
