--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
     "class main(object):\n",
     "    \n",
     "    def __init__(self, n_class, len_seq, dim_mfcc, batch_train, learning_rate, start_step, step_train, path_tfr_train, dir_log,\n",
-    "                 batch_test, test_step, step_test, path_tfr_test):\n",
+    "                 batch_test, step_test, start_ckpt, end_ckpt, step_ckpt, path_tfr_test):\n",
     "        self.n_class = n_class\n",
     "        self.len_seq = len_seq\n",
     "        self.dim_mfcc = dim_mfcc\n",
@@ -27,8 +27,10 @@
     "        self.path_tfr_train = path_tfr_train\n",
     "        self.dir_log = dir_log\n",
     "        self.batch_test = batch_test\n",
-    "        self.test_step = test_step\n",
     "        self.step_test = step_test\n",
+    "        self.start_ckpt = start_ckpt\n",
+    "        self.end_ckpt = end_ckpt\n",
+    "        self.step_ckpt = step_ckpt\n",
     "        self.path_tfr_test = path_tfr_test\n",
     "\n",
     "    #TFRecordsからデータセット取り出し\n",
@@ -245,23 +247,28 @@
     "            coord = tf.train.Coordinator()\n",
     "            threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
     "\n",
-    "            saver.restore(sess, os.path.join(self.dir_log, 'save_files/model.ckpt-'+str(self.test_step)))\n",
-    "            step = 1\n",
-    "            acc_all = 0.0\n",
-    "            while step * self.batch_test <= n_test_iters:\n",
-    "                batch = sess.run([datas, labels])\n",
-    "                batch[1] = batch[1].reshape([-1, self.n_class])\n",
-    "                sess.run(optimizer, feed_dict={x: batch[0], y_:batch[1]})\n",
-    "                run_options  = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
-    "                run_metadata = tf.RunMetadata()\n",
-    "                summary = sess.run(merged,\n",
-    "                    feed_dict={x: batch[0], y_:batch[1]},\n",
-    "                    options=run_options, run_metadata=run_metadata)\n",
-    "                writer.add_summary(summary, step)\n",
-    "                acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
-    "                loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
-    "                print('step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(step, loss, acc))\n",
-    "                step += 1\n",
+    "            for i in range(int((self.end_ckpt-self.start_ckpt)/self.step_ckpt+1)):\n",
+    "                ckpt_current = self.start_ckpt+self.step_ckpt*i\n",
+    "                saver.restore(sess, os.path.join(self.dir_log, 'save_files/model.ckpt-'+str(ckpt_current)))\n",
+    "                step = 1\n",
+    "                acc_all = 0.0\n",
+    "                while step * self.batch_test <= n_test_iters:\n",
+    "                    batch = sess.run([datas, labels])\n",
+    "                    batch[1] = batch[1].reshape([-1, self.n_class])\n",
+    "                    sess.run(optimizer, feed_dict={x: batch[0], y_:batch[1]})\n",
+    "                    run_options  = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
+    "                    run_metadata = tf.RunMetadata()\n",
+    "                    summary = sess.run(merged,\n",
+    "                        feed_dict={x: batch[0], y_:batch[1]},\n",
+    "                        options=run_options, run_metadata=run_metadata)\n",
+    "                    writer.add_summary(summary, step)\n",
+    "                    acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
+    "                    acc_all += acc\n",
+    "                    loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
+    "                    print('ckpt: {} / step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(ckpt_current, step, loss, acc))\n",
+    "                    step += 1\n",
+    "                acc_all /= step - 1\n",
+    "                print('ckpt: {} / ALL_TEST_ACC: {:.5f}'.format(ckpt_current, acc_all))\n",
     "\n",
     "            coord.request_stop()\n",
     "            coord.join(threads)\n",
@@ -279,36 +286,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 100 / loss: 2.922967 / acc: 0.03333\n",
-      "step: 200 / loss: 2.051805 / acc: 0.46667\n",
-      "step: 300 / loss: 0.879652 / acc: 0.86667\n",
-      "step: 400 / loss: 0.198623 / acc: 1.00000\n",
-      "step: 500 / loss: 0.046468 / acc: 1.00000\n",
-      "step: 600 / loss: 0.028530 / acc: 1.00000\n",
-      "step: 700 / loss: 0.016011 / acc: 1.00000\n",
-      "step: 800 / loss: 0.009124 / acc: 1.00000\n",
-      "step: 900 / loss: 0.179624 / acc: 1.00000\n",
-      "step: 1000 / loss: 0.036639 / acc: 1.00000\n",
-      "step: 1100 / loss: 0.013676 / acc: 1.00000\n",
-      "step: 1200 / loss: 0.007700 / acc: 1.00000\n",
-      "step: 1300 / loss: 0.005904 / acc: 1.00000\n",
-      "step: 1400 / loss: 0.005123 / acc: 1.00000\n",
-      "step: 1500 / loss: 0.003529 / acc: 1.00000\n",
-      "step: 1600 / loss: 0.003411 / acc: 1.00000\n",
-      "step: 1700 / loss: 0.002500 / acc: 1.00000\n",
-      "step: 1800 / loss: 0.002675 / acc: 1.00000\n",
-      "step: 1900 / loss: 0.001484 / acc: 1.00000\n",
-      "step: 2000 / loss: 0.001909 / acc: 1.00000\n",
-      "step: 2100 / loss: 0.001524 / acc: 1.00000\n",
-      "step: 2200 / loss: 0.001440 / acc: 1.00000\n",
-      "step: 2300 / loss: 0.001200 / acc: 1.00000\n",
-      "step: 2400 / loss: 0.001163 / acc: 1.00000\n",
-      "step: 2500 / loss: 0.001025 / acc: 1.00000\n",
-      "step: 2600 / loss: 0.000974 / acc: 1.00000\n",
-      "step: 2700 / loss: 0.000711 / acc: 1.00000\n",
-      "step: 2800 / loss: 0.000661 / acc: 1.00000\n",
-      "step: 2900 / loss: 0.000704 / acc: 1.00000\n",
-      "step: 3000 / loss: 0.000572 / acc: 1.00000\n"
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-100\n",
+      "ckpt: 100 / step: 1 / loss: 2.808868 / test_acc: 0.32000\n",
+      "ckpt: 100 / step: 2 / loss: 3.017400 / test_acc: 0.04000\n",
+      "ckpt: 100 / step: 3 / loss: 3.130681 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 4 / loss: 2.905990 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 5 / loss: 3.162045 / test_acc: 0.04000\n",
+      "ckpt: 100 / step: 6 / loss: 3.363924 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 7 / loss: 3.089487 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 8 / loss: 3.117339 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 9 / loss: 3.273930 / test_acc: 0.04000\n",
+      "ckpt: 100 / step: 10 / loss: 3.438680 / test_acc: 0.00000\n",
+      "ckpt: 100 / step: 11 / loss: 3.393912 / test_acc: 0.00000\n",
+      "ckpt: 100 / ALL_TEST_ACC: 0.04000\n"
      ]
     }
    ],
@@ -324,11 +314,14 @@
     "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords',\n",
     "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log',\n",
     "    batch_test = 25,\n",
-    "    test_step = 300,\n",
     "    step_test = 11,\n",
+    "    start_ckpt = 100,\n",
+    "    end_ckpt = 100,\n",
+    "    step_ckpt = 100,\n",
     "    path_tfr_test = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/test-male.tfrecords'\n",
     "    )\n",
-    "m.train()"
+    "#m.train()\n",
+    "m.test()"
    ]
   }
  ],
