クラス数の修正・モデルの調整

--- a/main.ipynb
+++ b/main.ipynb
@@ -126,22 +126,39 @@
     "            outputs, states = rnn.static_rnn(lstm_cell, x, dtype=tf.float32)\n",
     "            self.variable_summaries(outputs[-1])\n",
     "            return outputs, states\n",
-    "\n",
+    "    \n",
+    "    #畳込み層\n",
+    "    def Conv(self, x, size, channel, n_units, stddev, l_name):\n",
+    "        with tf.variable_scope(l_name) as scope:\n",
+    "            filter = self.variable('weights', shape=[size, size, channel, n_units], stddev=stddev)\n",
+    "            conv = tf.nn.conv2d(x, filter, strides=[1, 1, 1, 1], padding='SAME')\n",
+    "            biases = tf.get_variable('biases', shape=[n_units], initializer=tf.constant_initializer(0.0))\n",
+    "            bias = tf.nn.bias_add(conv, biases)\n",
+    "            conv = tf.nn.relu(bias, name=scope.name)\n",
+    "            self.variable_summaries(conv)\n",
+    "            return conv\n",
+    "        \n",
     "    #Model\n",
     "    def model(self, x):\n",
     "        x_unstack = tf.unstack(x, self.len_seq, 1)\n",
     "        x_unstack_rev = x_unstack[::-1]\n",
-    "\n",
-    "        lstm1 = self.LSTM(x_unstack, n_units=256, l_name='lstm1')\n",
-    "        #lstm2 = self.LSTM(lstm1[0], n_units=256, l_name='lstm2')\n",
     "        \n",
-    "        lstm_rev1 = self.LSTM(x_unstack_rev, n_units=256, l_name='lstm_rev1')\n",
-    "        #lstm_rev2 = self.LSTM(lstm_rev1[0], n_units=256, l_name='lstm_rev2')\n",
-    "\n",
-    "        concatenate = tf.concat([lstm1[0][-1], lstm_rev1[0][-1]], axis=1)\n",
+    "        network1 = self.LSTM(x_unstack, n_units=256, l_name='lstm1')\n",
+    "        network1 = self.LSTM(network1[0], n_units=256, l_name='lstm2')\n",
+    "        network1 = self.LSTM(network1[0], n_units=256, l_name='lstm3')\n",
+    "        #network1 = self.LSTM(network1[0], n_units=256, l_name='lstm4')        \n",
     "        \n",
-    "        linear1 = self.Linear(concatenate, n_inputs=512, n_units=self.n_class, stddev=0.01, l_name='linear1')\n",
-    "        return linear1\n",
+    "        network2 = self.LSTM(x_unstack_rev, n_units=256, l_name='lstm_rev1')\n",
+    "        network2 = self.LSTM(network2[0], n_units=256, l_name='lstm_rev2')\n",
+    "        network2 = self.LSTM(network2[0], n_units=256, l_name='lstm_rev3')\n",
+    "        #network2 = self.LSTM(network2[0], n_units=256, l_name='lstm_rev4')\n",
+    "        network2 = network2[::-1]\n",
+    "\n",
+    "        network = tf.concat([network1[0][-1], network2[0][-1]], axis=1, name='concat')\n",
+    "        \n",
+    "        network = self.Linear(network, n_inputs=512, n_units=self.n_class, stddev=0.01, l_name='linear1')\n",
+    "        \n",
+    "        return network\n",
     "        \n",
     "    #トレーニング\n",
     "    def train(self):\n",
@@ -265,7 +282,7 @@
     "                    acc = sess.run(accuracy, feed_dict={x: batch[0], y_: batch[1]})\n",
     "                    acc_all += acc\n",
     "                    loss = sess.run(cross_entropy, feed_dict={x: batch[0], y_: batch[1]})\n",
-    "                    print('ckpt: {} / step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(ckpt_current, step, loss, acc))\n",
+    "                    #print('ckpt: {} / step: {} / loss: {:.6f} / test_acc: {:.5f}'.format(ckpt_current, step, loss, acc))\n",
     "                    step += 1\n",
     "                acc_all /= step - 1\n",
     "                print('ckpt: {} / ALL_TEST_ACC: {:.5f}'.format(ckpt_current, acc_all))\n",
@@ -279,7 +296,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -287,36 +304,113 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-100\n",
-      "ckpt: 100 / step: 1 / loss: 2.808868 / test_acc: 0.32000\n",
-      "ckpt: 100 / step: 2 / loss: 3.017400 / test_acc: 0.04000\n",
-      "ckpt: 100 / step: 3 / loss: 3.130681 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 4 / loss: 2.905990 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 5 / loss: 3.162045 / test_acc: 0.04000\n",
-      "ckpt: 100 / step: 6 / loss: 3.363924 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 7 / loss: 3.089487 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 8 / loss: 3.117339 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 9 / loss: 3.273930 / test_acc: 0.04000\n",
-      "ckpt: 100 / step: 10 / loss: 3.438680 / test_acc: 0.00000\n",
-      "ckpt: 100 / step: 11 / loss: 3.393912 / test_acc: 0.00000\n",
-      "ckpt: 100 / ALL_TEST_ACC: 0.04000\n"
+      "ckpt: 100 / ALL_TEST_ACC: 0.09091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-200\n",
+      "ckpt: 200 / ALL_TEST_ACC: 0.09818\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-300\n",
+      "ckpt: 300 / ALL_TEST_ACC: 0.09091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-400\n",
+      "ckpt: 400 / ALL_TEST_ACC: 0.09091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-500\n",
+      "ckpt: 500 / ALL_TEST_ACC: 0.09091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-600\n",
+      "ckpt: 600 / ALL_TEST_ACC: 0.00000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-700\n",
+      "ckpt: 700 / ALL_TEST_ACC: 0.20000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-800\n",
+      "ckpt: 800 / ALL_TEST_ACC: 0.19273\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-900\n",
+      "ckpt: 900 / ALL_TEST_ACC: 0.17455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1000\n",
+      "ckpt: 1000 / ALL_TEST_ACC: 0.36000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1100\n",
+      "ckpt: 1100 / ALL_TEST_ACC: 0.30545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1200\n",
+      "ckpt: 1200 / ALL_TEST_ACC: 0.34182\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1300\n",
+      "ckpt: 1300 / ALL_TEST_ACC: 0.37455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1400\n",
+      "ckpt: 1400 / ALL_TEST_ACC: 0.54182\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1500\n",
+      "ckpt: 1500 / ALL_TEST_ACC: 0.60000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1600\n",
+      "ckpt: 1600 / ALL_TEST_ACC: 0.63273\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1700\n",
+      "ckpt: 1700 / ALL_TEST_ACC: 0.69091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1800\n",
+      "ckpt: 1800 / ALL_TEST_ACC: 0.60364\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-1900\n",
+      "ckpt: 1900 / ALL_TEST_ACC: 0.68000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2000\n",
+      "ckpt: 2000 / ALL_TEST_ACC: 0.77091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2100\n",
+      "ckpt: 2100 / ALL_TEST_ACC: 0.73455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2200\n",
+      "ckpt: 2200 / ALL_TEST_ACC: 0.86545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2300\n",
+      "ckpt: 2300 / ALL_TEST_ACC: 0.78545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2400\n",
+      "ckpt: 2400 / ALL_TEST_ACC: 0.82545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2500\n",
+      "ckpt: 2500 / ALL_TEST_ACC: 0.87273\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2600\n",
+      "ckpt: 2600 / ALL_TEST_ACC: 0.88727\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2700\n",
+      "ckpt: 2700 / ALL_TEST_ACC: 0.85091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2800\n",
+      "ckpt: 2800 / ALL_TEST_ACC: 0.84000\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-2900\n",
+      "ckpt: 2900 / ALL_TEST_ACC: 0.90545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3000\n",
+      "ckpt: 3000 / ALL_TEST_ACC: 0.89455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3100\n",
+      "ckpt: 3100 / ALL_TEST_ACC: 0.89818\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3200\n",
+      "ckpt: 3200 / ALL_TEST_ACC: 0.90182\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3300\n",
+      "ckpt: 3300 / ALL_TEST_ACC: 0.93091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3400\n",
+      "ckpt: 3400 / ALL_TEST_ACC: 0.92727\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3500\n",
+      "ckpt: 3500 / ALL_TEST_ACC: 0.88727\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3600\n",
+      "ckpt: 3600 / ALL_TEST_ACC: 0.90182\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3700\n",
+      "ckpt: 3700 / ALL_TEST_ACC: 0.89455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3800\n",
+      "ckpt: 3800 / ALL_TEST_ACC: 0.77455\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-3900\n",
+      "ckpt: 3900 / ALL_TEST_ACC: 0.92364\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4000\n",
+      "ckpt: 4000 / ALL_TEST_ACC: 0.87273\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4100\n",
+      "ckpt: 4100 / ALL_TEST_ACC: 0.85091\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4200\n",
+      "ckpt: 4200 / ALL_TEST_ACC: 0.79273\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4300\n",
+      "ckpt: 4300 / ALL_TEST_ACC: 0.78545\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4400\n",
+      "ckpt: 4400 / ALL_TEST_ACC: 0.72727\n",
+      "INFO:tensorflow:Restoring parameters from /media/ikesan009/B418B4D718B499B6/research/CENSREC/log/save_files/model.ckpt-4500\n",
+      "ckpt: 4500 / ALL_TEST_ACC: 0.75636\n"
      ]
     }
    ],
    "source": [
     "m = main(\n",
-    "    n_class = 22,\n",
+    "    n_class = 11,\n",
     "    len_seq = 300,\n",
-    "    dim_mfcc = 39,\n",
-    "    batch_train = 30,\n",
+    "    dim_mfcc = 42,\n",
+    "    batch_train = 20,\n",
     "    learning_rate = 0.001,\n",
     "    start_step = 1,\n",
-    "    step_train = 3000,\n",
+    "    step_train = 5000,\n",
     "    path_tfr_train = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/train-male.tfrecords',\n",
     "    dir_log = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/log',\n",
     "    batch_test = 25,\n",
     "    step_test = 11,\n",
     "    start_ckpt = 100,\n",
-    "    end_ckpt = 100,\n",
+    "    end_ckpt = 4500,\n",
     "    step_ckpt = 100,\n",
     "    path_tfr_test = '/media/ikesan009/B418B4D718B499B6/research/CENSREC/dataset/test-male.tfrecords'\n",
     "    )\n",
